feat: add solid-ethers package and wallet conection

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "contracts/erc4337"]
 	path = contracts/erc4337
 	url = git@github.com:eth-infinitism/account-abstraction.git
+[submodule "frontend/solid-ethers"]
+	path = frontend/solid-ethers
+	url = git@github.com:clement4saunier/solid-ethers.git
